# meson-build-info

./: build-info.wrap  genbuild.cmd  genbuild.sh  meson.build  readme.md
